event jump fixed

--- a/src/app/week-calendar/week-calendar.scss
+++ b/src/app/week-calendar/week-calendar.scss
@@ -29,6 +29,9 @@
       padding: 10px 5px;
       text-align: center;
       z-index: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .day-header {
@@ -48,7 +51,6 @@
       position: relative;
       border-bottom: 1px solid #eee;
       border-right: 1px solid #ccc;
-      height: 30px;
       cursor: pointer;
 
       &:hover {
